--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,16 +28,16 @@
                         <img alt="Licence Creative Commons" style="border-width:0" src="//i.creativecommons.org/l/by-sa/4.0/88x31.png" />
                     </a>
                     <br>
-                    Ce contenu est mis à disposition selon les termes de la
-                    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licence
-                    Creative Commons Attribution - Partage dans les Mêmes Conditions 4.0 International</a>.
-                    Cependant, tout contenu lié sur cette page dispose également de sa propre licence.
-                    [<a href="https://github.com/willdurand/jenairienacacher.fr">sources</a>]
+		    Dieser Inhalt ist eine Übersetzung und Anpassung an deutsche Besonderheiten von
+		    <a rel="licence" href="http://creativecommons.org/licenses/by-sa/4.0/">
+		    Creative Commons Namensnennung - Weitergabe unter gleichen Bedingungen 4.0 International</a>
+		    Jedoch, alle Inhalte auf dem diese Seite verlinkt steht unter seine eigene Lizenz.
+		    [<a href="https://github.com/cccs/ichhabenichtszuverbergen.de">Quellen</a>]
                 </div>
             </div>
         </div>
         <!-- Piwik -->
-        <script type="text/javascript">
+        <!--script type="text/javascript">
             var _paq = _paq || [];
             _paq.push(['trackPageView']);
             _paq.push(['enableLinkTracking']);
@@ -49,7 +49,7 @@
                 g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
             })();
         </script>
-        <noscript><p><img src="//piwik.vanoix.co/piwik.php?idsite=6" style="border:0;" alt="" /></p></noscript>
+        <noscript><p><img src="//piwik.vanoix.co/piwik.php?idsite=6" style="border:0;" alt="" /></p></noscript-->
         <!-- End Piwik Code -->
     </body>
 </html>
