--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div clas="container">
-    <h1><a href="/">Je n'ai rien à cacher.</a> <small>En fait si, et vous également !</small></h1>
+    <h1><a href="/">Ich habe nichts zu verbergen.</a> <small>Eigentlich schon, und Sie auch!</small></h1>
     <hr>
 
     {{ content }}
