--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div clas="container">
-    <h1><a href="/">Je n'ai rien à cacher.</a> <small>En fait si, et vous également !</small></h1>
+    <h1><a href="/">Ich habe nichts zu verbergen</a> <small>Eigentlich schon, und Sie auch!</small></h1>
     <hr>
 
     <h1 class="title">{{ page.title }}</h1>
@@ -19,6 +19,6 @@ layout: default
 
     <hr>
     <p class="text-center no-margin">
-        <a href="/#-mais-enfin,-..."><i class="glyphicon glyphicon-home" aria-hidden="true"></i> Retour vers la page principale</a>
+        <a href="/#-mais-enfin,-..."><i class="glyphicon glyphicon-home" aria-hidden="true"></i> Zurück zur Hauptseite</a>
     </p>
 </div>
