--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 		    Dieser Inhalt ist eine Übersetzung und Anpassung an deutsche Besonderheiten von
 		    <a rel="licence" href="http://creativecommons.org/licenses/by-sa/4.0/">
 		    Creative Commons Namensnennung - Weitergabe unter gleichen Bedingungen 4.0 International</a>
-		    Jedoch, alle Inhalte auf dem diese Seite verlinkt steht unter seine eigene Lizenz.
+		    Alle Inhalte die auf dieser Seite verlinkt sind stehen unter ihrer einer eigenen Lizenz.
 		    [<a href="https://github.com/cccs/ichhabenichtszuverbergen.de">Quellen</a>]
                 </div>
             </div>
