--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@ layout: default
     {{ content }}
 
     {% if page.resources %}
-        <h2>Ressources supplémentaires</h2>
+        <h2>Weitere Ressourcen</h2>
         {% for resource in page.resources %}
             {% include article_item.html article=resource %}
         {% endfor %}
